default for modification is true; updated shallow analyzer, linkedvariables needs adapting later