@@ -25,7 +25,7 @@ import static org.e2immu.language.cst.impl.analysis.ValueImpl.IndependentImpl.*;
 import static org.e2immu.language.cst.impl.analysis.ValueImpl.NotNullImpl.NOT_NULL;
 import static org.e2immu.language.cst.impl.analysis.ValueImpl.NotNullImpl.NULLABLE;
 
-public class ShallowMethodAnalyzer extends CommonAnalyzer {
+public class ShallowMethodAnalyzer extends AnnotationToProperty {
     private static final Logger LOGGER = LoggerFactory.getLogger(ShallowMethodAnalyzer.class);
     private final AnalysisHelper analysisHelper;
     private final Map<TypeInfo, Set<TypeInfo>> hierarchyProblems = new HashMap<>();
@@ -37,24 +37,20 @@ public class ShallowMethodAnalyzer extends CommonAnalyzer {
     }
 
     public void analyze(MethodInfo methodInfo) {
-        analyze(methodInfo, false, false);
-    }
-
-    public void analyze(MethodInfo methodInfo, boolean defaultModifiedMethod, boolean defaultModifiedParameter) {
-        if (methodInfo.analysis().getOrDefault(SHALLOW_ANALYZER, FALSE).isTrue()) {
+        if (methodInfo.analysis().getOrDefault(DEFAULTS_ANALYZER, FALSE).isTrue()) {
             return; // already done
         }
-        methodInfo.analysis().set(SHALLOW_ANALYZER, TRUE);
+        methodInfo.analysis().set(DEFAULTS_ANALYZER, TRUE);
 
         boolean explicitlyEmpty = methodInfo.explicitlyEmptyMethod();
 
         List<AnnotationExpression> annotations = annotationProvider.annotations(methodInfo);
         Map<Property, Value> map = annotationsToMap(methodInfo, annotations);
 
-        methodPropertiesBeforeParameters(methodInfo, map, explicitlyEmpty, defaultModifiedMethod);
+        methodPropertiesBeforeParameters(methodInfo, map, explicitlyEmpty);
 
         for (ParameterInfo parameterInfo : methodInfo.parameters()) {
-            handleParameter(parameterInfo, map, explicitlyEmpty, defaultModifiedParameter);
+            handleParameter(parameterInfo, map, explicitlyEmpty);
         }
 
         methodPropertiesAfterParameters(methodInfo, map);
@@ -89,7 +85,7 @@ public class ShallowMethodAnalyzer extends CommonAnalyzer {
 
         // check identity and parameter contract
         if (methodInfo.analysis().getOrDefault(IDENTITY_METHOD, FALSE).isTrue()) {
-            ParameterInfo p0 = methodInfo.parameters().get(0);
+            ParameterInfo p0 = methodInfo.parameters().getFirst();
             return p0.analysis().getOrDefault(CONTAINER_PARAMETER, FALSE);
         }
         return FALSE;
@@ -169,7 +165,7 @@ public class ShallowMethodAnalyzer extends CommonAnalyzer {
             return INDEPENDENT;
         }
         Value.Bool identity = (Value.Bool) map.get(IDENTITY_METHOD);
-        Value.Bool modified = (Value.Bool) map.get(MODIFIED_METHOD);
+        Value.Bool modified = (Value.Bool) map.get(NON_MODIFYING_METHOD);
         if (identity.isTrue() && modified.isFalse()) {
             return INDEPENDENT; // @Identity + @NotModified -> must be @Independent
         }
@@ -196,12 +192,11 @@ public class ShallowMethodAnalyzer extends CommonAnalyzer {
     }
 
     private void methodPropertiesBeforeParameters(MethodInfo methodInfo, Map<Property, Value> map,
-                                                  boolean explicitlyEmpty,
-                                                  boolean defaultModifiedMethod) {
+                                                  boolean explicitlyEmpty) {
         if (methodInfo.isConstructor()) {
             map.put(FLUENT_METHOD, FALSE);
             map.put(IDENTITY_METHOD, FALSE);
-            map.put(MODIFIED_METHOD, TRUE);
+            map.put(NON_MODIFYING_METHOD, TRUE);
             map.putIfAbsent(METHOD_ALLOWS_INTERRUPTS, FALSE);
         } else {
             Value.Bool fluent = (Value.Bool) map.get(FLUENT_METHOD);
@@ -218,7 +213,7 @@ public class ShallowMethodAnalyzer extends CommonAnalyzer {
                     LOGGER.warn("Impossible! how can a method without statements be @Identity?");
                 }
                 if (identity.isTrue() && (methodInfo.parameters().isEmpty()
-                                          || !methodInfo.returnType().equals(methodInfo.parameters().get(0).parameterizedType()))) {
+                                          || !methodInfo.returnType().equals(methodInfo.parameters().getFirst().parameterizedType()))) {
                     LOGGER.warn("@Identity method must have return type identical to formal type of first parameter");
                 }
             } else {
@@ -236,15 +231,14 @@ public class ShallowMethodAnalyzer extends CommonAnalyzer {
                 map.put(STATIC_SIDE_EFFECTS_METHOD, explicitlyEmpty ? FALSE : computeStaticSideEffects(methodInfo));
             }
 
-            Value.Bool modified = (Value.Bool) map.get(MODIFIED_METHOD);
+            Value.Bool modified = (Value.Bool) map.get(NON_MODIFYING_METHOD);
             if (modified != null) {
                 if (modified.isTrue() && explicitlyEmpty) {
                     messages.add(MessageImpl.warn(methodInfo,
                             "Impossible! how can a method without statements be @Modified?"));
                 }
             } else {
-                map.put(MODIFIED_METHOD, explicitlyEmpty ? FALSE
-                        : computeMethodModified(methodInfo, map, defaultModifiedMethod));
+                map.put(NON_MODIFYING_METHOD, explicitlyEmpty ? TRUE : computeMethodNonModifying(methodInfo, map));
             }
             Value.Bool allowsInterrupt = (Value.Bool) map.get(METHOD_ALLOWS_INTERRUPTS);
             if (allowsInterrupt != null) {
@@ -260,8 +254,7 @@ public class ShallowMethodAnalyzer extends CommonAnalyzer {
 
     private void handleParameter(ParameterInfo parameterInfo,
                                  Map<Property, Value> methodMap,
-                                 boolean explicitlyEmpty,
-                                 boolean defaultModifiedParameter) {
+                                 boolean explicitlyEmpty) {
         List<AnnotationExpression> annotations = annotationProvider.annotations(parameterInfo);
         Map<Property, Value> map = annotationsToMap(parameterInfo, annotations);
         if (explicitlyEmpty) {
@@ -270,11 +263,11 @@ public class ShallowMethodAnalyzer extends CommonAnalyzer {
                 LOGGER.warn("Parameter {} must be independent", parameterInfo);
             }
             map.put(INDEPENDENT_PARAMETER, INDEPENDENT);
-            Value.Bool modified = (Value.Bool) map.get(MODIFIED_PARAMETER);
+            Value.Bool modified = (Value.Bool) map.get(UNMODIFIED_PARAMETER);
             if (modified != null && modified.isTrue()) {
                 LOGGER.warn("Parameter {} cannot be @Modified", parameterInfo);
             }
-            map.put(MODIFIED_PARAMETER, FALSE);
+            map.put(UNMODIFIED_PARAMETER, FALSE);
             map.put(NOT_NULL_PARAMETER, analysisHelper.notNullOfType(parameterInfo.parameterizedType()));
             map.putIfAbsent(IGNORE_MODIFICATIONS_PARAMETER, FALSE);
         } else {
@@ -291,9 +284,9 @@ public class ShallowMethodAnalyzer extends CommonAnalyzer {
             if (ind == null) {
                 map.put(INDEPENDENT_PARAMETER, computeParameterIndependent(parameterInfo, methodMap, map));
             }
-            Value.Bool mod = (Value.Bool) map.get(MODIFIED_PARAMETER);
+            Value.Bool mod = (Value.Bool) map.get(UNMODIFIED_PARAMETER);
             if (mod == null) {
-                map.put(MODIFIED_PARAMETER, computeParameterModified(parameterInfo, defaultModifiedParameter));
+                map.put(UNMODIFIED_PARAMETER, computeParameterUnmodified(parameterInfo));
             }
             Value.NotNull nn = (NotNull) map.get(NOT_NULL_PARAMETER);
             if (nn == null) {
@@ -337,30 +330,29 @@ public class ShallowMethodAnalyzer extends CommonAnalyzer {
                 .reduce(NULLABLE, Value.NotNull::max);
     }
 
-    private Value.Bool computeParameterModified(ParameterInfo parameterInfo, boolean defaultParameterModified) {
+    private Value.Bool computeParameterUnmodified(ParameterInfo parameterInfo) {
         MethodInfo methodInfo = parameterInfo.methodInfo();
         Value.Bool typeContainer = methodInfo.typeInfo().analysis().getOrDefault(CONTAINER_TYPE, FALSE);
         if (typeContainer.isTrue()) {
-            return FALSE;
+            return TRUE;
         }
         ParameterizedType type = parameterInfo.parameterizedType();
         if (type.isPrimitiveStringClass()) {
-            return FALSE;
+            return TRUE;
         }
         Value.Immutable typeImmutable = analysisHelper.typeImmutable(type);
         if (typeImmutable != null && typeImmutable.isAtLeastImmutableHC()) {
-            return FALSE;
+            return TRUE;
         }
         Value.Bool override = methodInfo.overrides().stream()
                 .map(mi -> mi.parameters().get(parameterInfo.index()))
-                .map(pi -> pi.analysis().getOrDefault(MODIFIED_PARAMETER, ValueImpl.BoolImpl.NO_VALUE))
+                .map(pi -> pi.analysis().getOrDefault(UNMODIFIED_PARAMETER, ValueImpl.BoolImpl.NO_VALUE))
                 .reduce(ValueImpl.BoolImpl.NO_VALUE, Value.Bool::or);
         if (override.hasAValue()) {
             return override;
         }
-        return defaultParameterModified ? TRUE : FALSE;
+        return FALSE;
     }
-
 
     private Value.Independent computeParameterIndependent(ParameterInfo parameterInfo,
                                                           Map<Property, Value> methodMap,
@@ -374,7 +366,7 @@ public class ShallowMethodAnalyzer extends CommonAnalyzer {
             value = INDEPENDENT;
         } else {
             // @Modified needs to be marked explicitly
-            Value.Bool modifiedMethod = (Value.Bool) methodMap.get(PropertyImpl.MODIFIED_METHOD);
+            Value.Bool modifiedMethod = (Value.Bool) methodMap.get(PropertyImpl.NON_MODIFYING_METHOD);
             if (modifiedMethod.isTrue() || methodInfo.isFactoryMethod()) {
                 // note that an unbound type parameter is by default @Dependent, not @Independent1!!
                 Value.Independent independentFromImmutable = immutable.toCorrespondingIndependent();
@@ -399,27 +391,27 @@ public class ShallowMethodAnalyzer extends CommonAnalyzer {
     }
 
 
-    private Value computeMethodModified(MethodInfo methodInfo,
-                                        Map<Property, Value> map,
-                                        boolean defaultModifiedMethod) {
-        if (methodInfo.isConstructor()) return TRUE;
+    private Value computeMethodNonModifying(MethodInfo methodInfo, Map<Property, Value> map) {
+        if (methodInfo.isConstructor()) return FALSE; // almost by default, constructors modify the fields
         Value.Bool sse = (Value.Bool) map.get(STATIC_SIDE_EFFECTS_METHOD);
-        if (sse != null && sse.isTrue()) return FALSE;
+        if (sse != null && sse.isTrue()) return TRUE; // static side effects do not make modifications
         Value.Bool fluent = (Value.Bool) map.get(FLUENT_METHOD);
-        if (fluent != null && fluent.isTrue()) return TRUE;
+        if (fluent != null && fluent.isTrue()) return FALSE; // modifying--what else would it do?
         boolean nonStaticVoid = !methodInfo.isStatic() && methodInfo.noReturnValue();
-        if (nonStaticVoid) return TRUE;
+        if (nonStaticVoid) return FALSE; // modifying--what else would it do?
+
+        // we're allowed to change from @Modified to @NonModified, but not allowed to go the other way round
         Boolean fromOverride = methodInfo.overrides().stream()
                 .filter(MethodInfo::isPublic)
-                .filter(m -> m.analysis().haveAnalyzedValueFor(MODIFIED_METHOD, () -> {
+                .filter(m -> m.analysis().haveAnalyzedValueFor(NON_MODIFYING_METHOD, () -> {
                     if (hierarchyProblems.computeIfAbsent(methodInfo.typeInfo(), t -> new HashSet<>()).add(m.typeInfo())) {
                         LOGGER.warn("Have no modification value for {}, overridden by {}", m, methodInfo);
                     }
                 }))
-                .map(m -> m.analysis().getOrNull(MODIFIED_METHOD, ValueImpl.BoolImpl.class))
+                .map(m -> m.analysis().getOrNull(NON_MODIFYING_METHOD, ValueImpl.BoolImpl.class))
                 .map(v -> v == null ? null : v.isTrue())
                 .reduce(null, ShallowMethodAnalyzer::nullOr);
-        if (fromOverride == null) return defaultModifiedMethod ? TRUE : FALSE;
+        if (fromOverride == null) return FALSE; // general default value
         return ValueImpl.BoolImpl.from(fromOverride);
     }
 
